--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sarojDhakal",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-generator": "^4.16.1",
     "mongoose": "^8.3.4",
