--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "sarojDhakal",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-generator": "^4.16.1",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "uuid": "^9.0.1"
   }
 }
